--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,6 @@
 .qs{
 	font-family: 'Quicksand', sans-serif;
 }
-
 @font-face {
   font-family: 'Open Sans';
   font-style: normal;
@@ -19,20 +18,31 @@
   src: local('Quicksand Regular'), local('Quicksand-Regular'), url(http://fonts.gstatic.com/s/quicksand/v5/sKd0EMYPAh5PYCRKSryvWz8E0i7KZn-EPnyo3HZu7kw.woff) format('woff');
 }
 
+.carousel{
+	margin-bottom:60px;
+}
 .shadow{
 	box-shadow: 8px 8px 8px #888888;
 }
 
+.content{
+	text-align: center;
+}
 
-
+.center{
+	padding-top:70px;
+	width:90%;
+	padding-left:20px;
+	padding-right:20px;
+	margin: 0 auto;
+	background-color:#fff;
+}
 /* GLOBAL STYLES
 -------------------------------------------------- */
 /* Padding below the footer and lighter body text */
 
 body {
-	padding-top:70px;
-  color: #5a5a5a;
-  padding-right:100px;
-  padding-left:100px;
+  	background-color: rgba(249, 249, 249, 1) !important;
+  	width:100%;
 }
 
