Resize, recolour, temporary assets

--- a/styles.css
+++ b/styles.css
@@ -18,31 +18,38 @@
   src: local('Quicksand Regular'), local('Quicksand-Regular'), url(http://fonts.gstatic.com/s/quicksand/v5/sKd0EMYPAh5PYCRKSryvWz8E0i7KZn-EPnyo3HZu7kw.woff) format('woff');
 }
 
-.carousel{
-	margin-bottom:60px;
-}
 .shadow{
-	box-shadow: 8px 8px 8px #888888;
+	box-shadow: 5px 5px 5px #888888;
 }
 
 .content{
+	margin-top:50px;
 	text-align: center;
 }
-
+.carousel{
+	max-width:100%;
+	width:95%; 
+	height:95%; 
+	margin: 0 auto;
+}
 .center{
 	padding-top:70px;
-	width:90%;
+	width:85%;
 	padding-left:20px;
 	padding-right:20px;
 	margin: 0 auto;
 	background-color:#fff;
 }
+/*.carousel-inner > .item > img{
+	max-height:500px;
+	max-width:100%;
+}*/
+
 /* GLOBAL STYLES
 -------------------------------------------------- */
 /* Padding below the footer and lighter body text */
 
 body {
-  	background-color: rgba(249, 249, 249, 1) !important;
+  	background-color: #f6f6f6 !important;
   	width:100%;
 }
-
