--- a/styles.css
+++ b/styles.css
@@ -34,11 +34,22 @@
 }
 .center{
 	padding-top:70px;
-	width:85%;
+	padding-bottom:20px;
 	padding-left:20px;
 	padding-right:20px;
+	width:85%;
 	margin: 0 auto;
 	background-color:#fff;
+}
+.footer{
+	bottom:10px;
+}
+.footer > p{
+	position:absolute;
+	right:15%;
+}
+.footer > a{
+	left:15%;
 }
 /*.carousel-inner > .item > img{
 	max-height:500px;
