--- a/styles.css
+++ b/styles.css
@@ -37,7 +37,7 @@
 	padding-bottom:20px;
 	padding-left:20px;
 	padding-right:20px;
-	width:85%;
+	width:90%;
 	margin: 0 auto;
 	background-color:#fff;
 }
@@ -58,6 +58,23 @@
 .footer > a, .footer > iframe{
 	position:absolute;
 	left:15%;
+}
+
+.hover{
+	opacity:0.6;
+	-webkit-transition: all 0.4s;
+    transition: all 0.4s;  
+}
+.green{
+	-webkit-transition: all 0.4s;
+	-moz-transition: all 0.4s;
+    transition: all 0.4s;  
+}
+.green:hover,.green:active,.green:focus{
+	-webkit-transition: all 0.4s;
+	-moz-transition: all 0.4s;
+    transition: all 0.4s;  
+    color: #14A168;
 }
 /*.carousel-inner > .item > img{
 	max-height:500px;
