--- a/styles.css
+++ b/styles.css
@@ -123,7 +123,10 @@
 	-moz-transition: all 0.4s;
     transition: all 0.4s;  
 }
-
+.callout{
+	float:left; 
+	color:#428BCA;
+}
 .bs-callout {
     padding: 20px;
     margin: 20px 0;
