--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,12 @@
 .qs{
 	font-family: 'Quicksand', sans-serif;
 }
+.ls{
+	font-family: 'Liberation Sans', sans-serif;
+}
+.ub{
+	font-family: 'Ubuntu', sans-serif;
+}
 
 @font-face {
   font-family: 'Open Sans';
@@ -53,9 +59,10 @@
 	padding-bottom:20px;
 	padding-left:20px;
 	padding-right:20px;
-	width:90%;
+	width:80%;
 	margin: 0 auto;
 	background-color:#fff;
+    box-shadow: 0px 0px 3px #888888;
 }
 .footer{
 	bottom:10px;
@@ -210,6 +217,6 @@
 /* Padding below the footer and lighter body text */
 
 body {
-  	background-color: #f6f6f6 !important;
+  	background-color: #f1f1f1 !important;
   	width:100%;
 }
