--- a/css/styles.css
+++ b/css/styles.css
@@ -23,6 +23,26 @@ a:hover{
 	color:rgba(23, 48, 71, 1);
 	text-decoration:none !important;
 }
+a.ignore, a.ignore:visited, a.ignore:link, a.ignore:active{
+	text-decoration: initial !important;
+	color:#111;
+}
+a.ignore:hover{
+	text-decoration: initial !important;
+	color:white;
+}
+a.main, a.main:visited, a.main:link, a.main:active{
+	text-decoration:none !important;
+	color:#FFF;
+	-webkit-transition: all 0.4s;
+	-moz-transition: all 0.4s;
+}
+a.main:hover{
+	-webkit-transition: all 0.4s;
+	-moz-transition: all 0.4s;
+	color:#000;
+	text-decoration:none !important;
+}
 @font-face {
   font-family: 'Open Sans';
   font-style: normal;
@@ -35,7 +55,20 @@ a:hover{
   font-weight: 400;
   src: local('Quicksand Regular'), local('Quicksand-Regular'), url(http://fonts.gstatic.com/s/quicksand/v5/sKd0EMYPAh5PYCRKSryvWz8E0i7KZn-EPnyo3HZu7kw.woff) format('woff');
 }
-
+.navbar-fixed-bottom{
+	display:fixed;
+	bottom:0px;
+}
+.navigation-bar{
+	position:fixed;
+	bottom:50px;
+	height:100px;
+	width:100%;
+	background-color:rgba(0,0,0,0.7);
+	z-index:10;
+	border-top: 2px solid white;
+	border-bottom: 2px solid white;
+}
 @media (max-width: 974px) {
 	.colfix {
 		border-left: 0px;
@@ -62,10 +95,13 @@ a:hover{
 	text-align: center;
 }
 .carousel{
-	max-width:100%;
-	width:95%; 
-	height:95%; 
-	margin: 0 auto;
+	/*max-width:100%;*/
+	width:100%; 
+	height:100%; 
+	margin: 0;
+}
+.carousel-control{
+	height:100%;
 }
 .center{
 	padding-top:70px;
@@ -80,6 +116,9 @@ a:hover{
 .footer{
 	bottom:10px;
 	height:25px;
+}
+.overflow{
+	overflow:hidden;
 }
 .col-sm-4{
 	width:30%;
